Fixed problem with wrong scaling content page on smaller screens

--- a/src/NetAdmin.Web/wwwroot/css/site.css
+++ b/src/NetAdmin.Web/wwwroot/css/site.css
@@ -11,3 +11,8 @@
 .ui.vertical.menu .item > i.icon {
   float: left;
 }
+
+#content {
+    margin-left: 20px;
+    width: calc(100% - 200px);
+}
